--- a/foundry.toml
+++ b/foundry.toml
@@ -5,4 +5,9 @@ libs = ["lib"]
 
 remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
 
+# [fuzz]
+# runs = 128
+# depth = 128
+
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
